update for SDK generation
